logs/archive/node_garden_error.txt
warning: C:\Users\Trinity\Documents\daydream\Ask_Pete\crates\ask_pete_client\Cargo.toml: unused manifest key: dependencies.tokio.getrandom
    Checking tracing-subscriber v0.3.20
    Checking naga_oil v0.13.0
    Checking hydration_context v0.3.0
    Checking server_fn v0.8.8
   Compiling leptos_macro v0.8.12
    Checking leptos_config v0.8.8
   Compiling url v2.5.7
    Checking ask_pete_core v0.1.0 (C:\Users\Trinity\Documents\daydream\Ask_Pete\crates\ask_pete_core)
    Checking reqwest v0.11.27
    Checking axum v0.7.9
    Checking reactive_graph v0.2.11
warning: unused import: `HashSet`
  --> crates\ask_pete_core\src\lib.rs:11:33
   |
11 | use std::collections::{HashMap, HashSet};
   |                                 ^^^^^^^
   |
   = note: `#[warn(unused_imports)]` (part of `#[warn(unused)]`) on by default

   Compiling sqlx-core v0.8.6
    Checking bevy_log v0.13.2
    Checking bevy_hierarchy v0.13.2
    Checking bevy_asset v0.13.2
    Checking bevy_diagnostic v0.13.2
    Checking bevy_gilrs v0.13.2
    Checking reactive_stores v0.3.0
    Checking bevy_transform v0.13.2
    Checking bevy_winit v0.13.2
    Checking bevy_eventlistener v0.7.0
warning: `ask_pete_core` (lib) generated 1 warning (run `cargo fix --lib -p ask_pete_core` to apply 1 suggestion)
    Checking tachys v0.2.11
   Compiling sqlx-postgres v0.8.6
    Checking bevy_render v0.13.2
    Checking bevy_audio v0.13.2
   Compiling sqlx-macros-core v0.8.6
    Checking bevy_core_pipeline v0.13.2
    Checking bevy_scene v0.13.2
    Checking bevy_animation v0.13.2
    Checking bevy_picking_core v0.18.1
   Compiling sqlx-macros v0.8.6
    Checking bevy_picking_selection v0.18.1
    Checking bevy_sprite v0.13.2
    Checking bevy_pbr v0.13.2
    Checking bevy_picking_input v0.18.1
    Checking bevy_picking_highlight v0.18.1
    Checking leptos_server v0.8.6
    Checking leptos_dom v0.8.7
    Checking bevy_mod_picking v0.18.3
    Checking leptos v0.8.14
    Checking bevy_text v0.13.2
    Checking leptos_router v0.8.10
    Checking leptos_meta v0.8.5
    Checking sqlx v0.8.6
    Checking ask_pete_services v0.1.0 (C:\Users\Trinity\Documents\daydream\Ask_Pete\crates\ask_pete_services)
    Checking bevy_ui v0.13.2
    Checking ask_pete_trainyard v0.1.0 (C:\Users\Trinity\Documents\daydream\Ask_Pete\crates\ask_pete_trainyard)
    Checking ask_pete_researcher v0.1.0 (C:\Users\Trinity\Documents\daydream\Ask_Pete\crates\ask_pete_researcher)
    Checking ask_pete_frontend v0.1.0 (C:\Users\Trinity\Documents\daydream\Ask_Pete\crates\ask_pete_frontend)
    Checking bevy_gltf v0.13.2
    Checking bevy_gizmos v0.13.2
    Checking bevy_internal v0.13.2
    Checking bevy_defer v0.10.0
    Checking bevy v0.13.2
    Checking yarnspinner_core v0.2.0
    Checking ask_pete_client v0.1.0 (C:\Users\Trinity\Documents\daydream\Ask_Pete\crates\ask_pete_client)
    Checking ask_pete_tools v0.1.0 (C:\Users\Trinity\Documents\daydream\Ask_Pete\crates\ask_pete_tools)
    Checking yarnspinner_compiler v0.2.1
    Checking yarnspinner_runtime v0.2.0
    Checking yarnspinner v0.2.0
    Checking bevy_yarnspinner v0.2.0
    Checking ask_pete_physics v0.1.0 (C:\Users\Trinity\Documents\daydream\Ask_Pete\crates\ask_pete_physics)
    Checking ask_pete_node_garden v0.1.0 (C:\Users\Trinity\Documents\daydream\Ask_Pete\crates\ask_pete_node_garden)
error[E0433]: failed to resolve: use of unresolved module or unlinked crate `ask_pete_player`
  --> crates\ask_pete_node_garden\src\app.rs:12:5
   |
12 | use ask_pete_player::pages::character_creation::CharacterCreationPage;
   |     ^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `ask_pete_player`
   |
help: there is a crate or module with a similar name
   |
12 - use ask_pete_player::pages::character_creation::CharacterCreationPage;
12 + use ask_pete_client::pages::character_creation::CharacterCreationPage;
   |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `ask_pete_player`
  --> crates\ask_pete_node_garden\src\app.rs:13:5
   |
13 | use ask_pete_player::pages::engine_cab_layout::EngineCabLayout;
   |     ^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `ask_pete_player`
   |
help: there is a crate or module with a similar name
   |
13 - use ask_pete_player::pages::engine_cab_layout::EngineCabLayout;
13 + use ask_pete_client::pages::engine_cab_layout::EngineCabLayout;
   |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `ask_pete_player`
  --> crates\ask_pete_node_garden\src\app.rs:14:5
   |
14 | use ask_pete_player::pages::play_mode::PlayMode;
   |     ^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `ask_pete_player`
   |
help: there is a crate or module with a similar name
   |
14 - use ask_pete_player::pages::play_mode::PlayMode;
14 + use ask_pete_client::pages::play_mode::PlayMode;
   |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `ask_pete_player`
  --> crates\ask_pete_node_garden\src\app.rs:15:5
   |
15 | use ask_pete_player::pages::student_dashboard::StudentDashboard;
   |     ^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `ask_pete_player`
   |
help: there is a crate or module with a similar name
   |
15 - use ask_pete_player::pages::student_dashboard::StudentDashboard;
15 + use ask_pete_client::pages::student_dashboard::StudentDashboard;
   |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `ask_pete_player`
  --> crates\ask_pete_node_garden\src\app.rs:16:5
   |
16 | use ask_pete_player::pages::weigh_station::WeighStation;
   |     ^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `ask_pete_player`
   |
help: there is a crate or module with a similar name
   |
16 - use ask_pete_player::pages::weigh_station::WeighStation;
16 + use ask_pete_client::pages::weigh_station::WeighStation;
   |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `ask_pete_teacher`
  --> crates\ask_pete_node_garden\src\app.rs:19:5
   |
19 | use ask_pete_teacher::pages::knowledge_library::KnowledgeLibrary;
   |     ^^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `ask_pete_teacher`
   |
help: there is a crate or module with a similar name
   |
19 - use ask_pete_teacher::pages::knowledge_library::KnowledgeLibrary;
19 + use ask_pete_researcher::pages::knowledge_library::KnowledgeLibrary;
   |

error[E0433]: failed to resolve: use of unresolved module or unlinked crate `ask_pete_teacher`
  --> crates\ask_pete_node_garden\src\app.rs:20:5
   |
20 | use ask_pete_teacher::pages::train_yard_layout::TrainYardLayout;
   |     ^^^^^^^^^^^^^^^^ use of unresolved module or unlinked crate `ask_pete_teacher`
   |
help: there is a crate or module with a similar name
   |
20 - use ask_pete_teacher::pages::train_yard_layout::TrainYardLayout;
20 + use ask_pete_researcher::pages::train_yard_layout::TrainYardLayout;
   |

For more information about this error, try `rustc --explain E0433`.
error: could not compile `ask_pete_node_garden` (lib) due to 7 previous errors
